# request-evaluation

./: .env  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  alembic.ini  database.py  docker-compose.yml  example-build.yml  main.py  models.py  pyproject.toml  readme.md  settings.py  task.py
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  linter_pull_request.yml  release.yml
generate_word/: generate_file.py
migrations/: env.py
migrations/versions/: 334edf1889ab_initional_migration.py  48690f70f098_initional_migration.py  53b75e1e6be5_add_models.py  65a007288939_add_columnls.py  8340b6565c72_update_table.py  97dde16d6b82_add_columnls.py  a2d0f4fd41c5_table.py  af44ca6276fe_initional_migration.py
send_message/: send_email.py
services/: generate_word.py  network_load.py  send_email.py
static/: readme.md
templates/: post_identification.html  report.docx  statistics.html  styles.css
