[tool.poetry]
name = "requestevaluation"
version = "0.1.0"
description = ""
authors = ["MarionetkaX <sergey07061999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.32"
alembic = "^1.7.7"
sqlmodel = "^0.0.6"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"
python-dotenv = "^0.20.0"
docxtpl = "^0.16.0"
Jinja2 = "^3.1.1"
aioschedule = "^0.5.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
