[tool.poetry]
name = "requestevaluation"
version = "0.1.0"
description = ""
authors = ["MarionetkaX <sergey07061999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.21.1"
SQLAlchemy = "^1.4.32"
alembic = "^1.7.7"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.27.0"
python-dotenv = "^0.21.0"
docxtpl = "^0.16.0"
Jinja2 = "^3.1.1"
aioschedule = "^0.5.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-import-order = "^0.18.1"
flake8-docstrings = "^1.6.0"
flake8-builtins = "^2.0.1"
flake8-quotes = "^3.3.1"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.2.0"
flake8-simplify = "^0.19.2"
flake8-spellcheck = "^0.28.0"
pep8-naming = "^0.13.0"
flake8-use-fstring = "^1.3"
flake8-annotations = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
